Upgrade to Docusaurus v3

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/129/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/129/index.mdx
@@ -91,7 +91,7 @@ Nouvelle solution pour créer des emails basé sur React et TypeScript. En prati
 - 🎨 [NodeToy 2.0 beta](https://nodetoy.co/): pour les devs créatifs, ce nouvel éditeur de shaders est compatible React-Three-Fiber, via [react-nodetoy](https://github.com/NodeToy/react-nodetoy)
 - 📜 [Downgrade to MPA if users prefer reduced data in Remix](https://sergiodxa.com/articles/downgrade-to-mpa-if-users-prefer-reduced-data-in-remix): explique comment dégrader Remix de SPA vers MPA de manière conditionnelle, en fonction du header `Save-Data: on`. Un levier intéressant à utiliser pour les performances des apps/pages avec des session courtes.
 - 📜 [SvelteKit Auth: Bringing NextAuth.js to all frameworks](https://vercel.com/blog/announcing-sveltekit-auth): c'est au tour de NextAuth de devenir agnostic. Le projet devient Auth.js et supporte maintenant Next.js + SvelteKit.
-- 📜 [Why does onClick={x()} causes "too many re-renders" error in React?](https://alexsidorenko.com/blog/onclick-too-many-re-renders/): explication simple et bien illustrée d'une erreur (ou typo) qu'on a tous fait un jour 😅
+- 📜 [Why does `onClick={x()}` causes "too many re-renders" error in React?](https://alexsidorenko.com/blog/onclick-too-many-re-renders/): explication simple et bien illustrée d'une erreur (ou typo) qu'on a tous fait un jour 😅
 - 📜 [Svelte vs React: Which framework to learn in 2023?](https://scrimba.com/articles/svelte-vs-react/)
 - 📜 [Next, Nest, Nuxt… Nust?](https://www.twilio.com/blog/comparing-nextjs-nestjs-nuxt-gatsby)
 - 📜 [The Most Popular CSS-in-JS Libraries in 2022](https://stackdiary.com/css-in-js-libraries/)
