--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/142/index.mdx
@@ -47,7 +47,7 @@ Testez le dès maintenant en moins de 30 minutes !
 
 **[TypeScript 5.1 (beta) + React](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-beta/)**
 
-Une version TypeScript importante qui va permettre à React de pouvoir déclarer les types valides à utiliser dans le JSX. Il est prévu d'utiliser cette nouvelle feature au plus tôt dans les typedefs React, qui ont d'ailleurs été [forkées](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/65126) pour continuer à supporter des anciennes versions (TypeScript <= 5.0).
+Une version TypeScript importante qui va permettre à React de pouvoir déclarer les types valides à utiliser dans le JSX. Il est prévu d'utiliser cette nouvelle feature au plus tôt dans les typedefs React, qui ont d'ailleurs été [forkées](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/65126) pour continuer à supporter des anciennes versions (TypeScript \<= 5.0).
 
 Il y a de bonnes raisons d'adopter TypeScript 5.1+ au plus vite. Cela débloque entre autre:
 
