--- a/website/newsletter/142/index.mdx
+++ b/website/newsletter/142/index.mdx
@@ -47,7 +47,7 @@ So what are you waiting for? Start using React-admin now, it’s free 😉, and 
 
 **[TypeScript 5.1 (beta) + React](https://devblogs.microsoft.com/typescript/announcing-typescript-5-1-beta/)**
 
-An important TypeScript release that will allow React to be able to declare its own valid JSX types. It is planned to use this new feature as soon as possible in React typedefs, which have already been [forked](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/65126) to continue to support older versions (TypeScript <= 5.0).
+An important TypeScript release that will allow React to be able to declare its own valid JSX types. It is planned to use this new feature as soon as possible in React typedefs, which have already been [forked](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/65126) to continue to support older versions (TypeScript \<= 5.0).
 
 There are good reasons to adopt TypeScript 5.1+ as soon as possible. It unlocks among other things:
 
