--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -21,39 +21,40 @@ Last updated: **June 2023**.
 
 <ul>
   <li>
-    <b>Advertise</b>: a product, course, conference, job offer...
+    <b>Advertise</b><>: a product, course, conference, job offer...</>
   </li>
   <li>
-    <b>Placements</b>: 1st sponsor, 2nd sponsor, job offers, custom...
+    <b>Placements</b><>: 1st sponsor, 2nd sponsor, job offers, custom...</>
   </li>
   <li>
-    <b>Subscribers count</b>:{" "}
+    <b>Subscribers count</b><>: </>
     <span>{newsletterStats.all.subscribersCount}</span>
   </li>
   <li>
-    <b>Open-rate</b>: <span>{newsletterStats.all.openRate}%</span>
+      <><b>Open-rate</b><>: </><span>{newsletterStats.all.openRate}%</span></>
   </li>
   <li>
-    <b>Click-rate</b>: <span>{newsletterStats.all.clickRate}%</span>
+      <><b>Click-rate</b><>: </><span>{newsletterStats.all.clickRate}%</span></>
   </li>
   <li>
-    <b>Localized</b>: the newsletter is sent in 🇬🇧 English and 🇫🇷 French.
+    <b>Localized</b>
+    <>: the newsletter is sent in 🇬🇧 English and 🇫🇷 French.</>
   </li>
   <li>
-    <b>Readers at</b>: Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe,
-    Cloudflare, ByteDance, Figma, Uber...
+    <b>Readers at</b>
+    <>: Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe,
+    Cloudflare, ByteDance, Figma, Uber...</>
   </li>
   <li>
-    <b>Most popular offer</b>:{" "}
-    <a href="#sponsor-1st">
-      1st sponsor - 4 issues - sent to all subscribers
-    </a>
+    <b>Most popular offer</b>
+    <>:{" "}</>
+    <a href="#sponsor-1st">1st sponsor - 4 issues - sent to all subscribers</a>
   </li>
   <li>
     <b>
       <a href={sponsorshipCalendarLink}>Sponsorship calendar</a>
     </b>
-    : check for the next availabilities
+    <>: check for the next availabilities</>
   </li>
   <li>
     <b>
@@ -152,8 +153,12 @@ The newsletter structure stays the same every week, offering 3 sponsorship ad pl
   Check our{" "}
   <b>
     <a href={lastIssueLink}>last newsletter issue</a>
-  </b>{" "}
-  to get a better idea!
+  </b>
+
+{" "}
+
+<p>{"to get a better idea!"}</p>
+
 </span>
 
 <br />
