--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -8,7 +8,17 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Bun 1.0 ?
+
+RN EU
+
+Astro
+
+Node 16 EOL https://twitter.com/kentcdodds/status/1698820286681141394
+
+https://twitter.com/sebastienlorber/status/1699065823959421109
+
+https://www.indiehackers.com/product/french-react-newsletter
 
 <!-- truncate -->
 
@@ -36,8 +46,32 @@ React makes it painless to create interactive UIs. Design simple views for each 
 
 ## ⚛️ React {#react}
 
+[Astro 3.0](https://astro.build/blog/astro-3/)
+
+Sitepoint: Open source web framework Astro just reached its 3.0 milestone. This realease brings a ton of cool features, notably a significant performance bump (30-75% faster component render), and it also brings support for view transitions, enabling you to fade, slide, morph, and even persist stateful elements across page navigation with ease.
+
+[Vercel: Our Official Hosting Partner](https://astro.build/blog/vercel-official-hosting-partner/)
+
+[Fred K. Schott: Astro, Open Source, and the Web](https://www.youtube.com/watch?v=9196iQJtK4s)
+
+---
+
+- [Challenging Established Norms: Making Component Fetching the Exception](https://jjenzz.com/making-component-fetching-the-exception/)
+- [Managing Side Effects in React](https://ui.dev/c/react/effects) ???
+- [react-prod-sourcemaps](https://github.com/markerikson/react-prod-sourcemaps) ?
+- [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations)
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- [ReactJS Day, Octobre 27, 2023] is offering us [-10% on conference tickets](https://2023.reactjsday.it/index.html) with code  "media_TWIR"
+- [Use Destructuring To Handle Forms In React!](https://krassnig.dev/blog/use-destructuring-to-handle-forms-in-react.html)
+- [ReactJS Day, Octobre 27, 2023] is offering us [-10% on conference tickets](https://2023.reactjsday.it/index.html) with code "media_TWIR"
+- [next-flat-routes](https://github.com/ifyio/next-flat-routes)
+- [What Is Streaming In The App Router?](https://www.pronextjs.dev/what-is-streaming-in-the-app-router)
+- [Next.js Deep Dive - Caching and Revalidating](https://github.com/vercel/next.js/discussions/54075)
+- [Web Developers, CSS-in-JS is Ruining Your Product](https://cord.com/blog/migrating-from-css-in-js-to-vanilla-extract)
+- [How to Choose a Deployment Strategy for Your Next.js Application](https://www.freecodecamp.org/news/deployment-strategies-for-nextjs-apps/)
+- [Storybook - How to run visual tests in 2023](https://www.chromatic.com/blog/how-to-run-visual-regression-tests-in-2023/)
+- [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190)
+- [Custom React Hooks](https://www.markrabey.com/blog/custom-react-hooks)
+- [Deciding which state management to use: opting between useContext and Redux](https://blog.saeloun.com/2023/08/24/deciding-which-state-management-to-use-opting-between-use-context-and-redux/) ???
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -57,7 +91,9 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- [React Native Performance Measuring and Monitoring Tools](https://semaphoreci.com/blog/react-native-performance-measuring-monitoring-tools)
+- [Things to look forward to in React Native](https://buttondown.email/whatever_jamie/archive/things-to-look-forward-to-in-react-native/) https://twitter.com/LinguaBrowse/status/1697794841160421533
+- [Expo - Understand your users and grow your app with EAS Insights](https://expo.dev/changelog/2023/08-22-insights)
 
 - 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, September 7–8, 2023) is offering us [-15% on conference tickets](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) with code "thisweekinreact15".
 
@@ -65,7 +101,7 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
+- [Tuto React Server Component de A à Z en 2023](https://www.youtube.com/watch?v=u4wV0-31oI0)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -80,7 +116,16 @@ Nous intervenons en développement, conseil, audit ou formation, sur des thémat
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Announcing Biome - The official fork of Rome (unmaintained)](https://biomejs.dev/blog/annoucing-biome)
+- Lighthouse 11
+- [State of CSS 2023 - Survey Results](https://2023.stateofcss.com/)
+- [Firefox 117 - CSS Nesting](https://www.mozilla.org/en-US/firefox/117.0/releasenotes/)
+- [Announcing TypeScript 5.2](https://devblogs.microsoft.com/typescript/announcing-typescript-5-2/)
+- [TypeScript 5.3 Iteration Plan](https://github.com/microsoft/TypeScript/issues/55486)
+- [View Transitions Break Incremental Rendering](https://ericportis.com/posts/2023/view-transitions-break-incremental-rendering/)
+- [Chrome - Long Animation Frames API](https://developer.chrome.com/articles/long-animation-frames/)
+- [Bézier Curves - and the logic behind them](https://blog.richardekwonye.com/bezier-curves)
+- [Use web components for what they’re good at](https://nolanlawson.com/2023/08/23/use-web-components-for-what-theyre-good-at/)
 
 ---
 
