--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -34,13 +34,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Frontendmasters](/emails/issues/158/frontendmasters.jpg)](https://frontendmasters.com/learn/react/)
+[![Frontendmasters](/emails/issues/158/frontendmasters.jpg)](https://frontendmasters.com/learn/react/?utm_source=newsletter&utm_medium=thisweekinreact&utm_campaign=reactpath)
 
-**[FrontendMasters - React.js Learning Path](https://frontendmasters.com/learn/react/)**
+**[FrontendMasters – Complete React.js Learning Path to Senior React Developer](https://frontendmasters.com/learn/react/?utm_source=newsletter&utm_medium=thisweekinreact&utm_campaign=reactpath)**
 
-Be productive with React.js, today's most popular framework.
-
-React makes it painless to create interactive UIs. Design simple views for each state in your application, and React will efficiently update and render juste the right components when your data changes !
+Learn React.js from the ground up to advanced topics like performance, testing, and code quality. Start by building a real-world app in the Complete Introduction to React. Continue with Intermediate React, integrating the most popular tools from the ecosystem. Then learn performance, TypeScript, and even Next.js, the fullstack React framework!
 
 ---
 
