--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -60,35 +60,33 @@ https://astro.build/blog/astro-i18n/
 
 ---
 
+[Making Sense of React Server Components](https://www.joshwcomeau.com/react/server-components/)
+
+https://twitter.com/JoshWComeau/status/1699467100153057743
+
+---
+
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- 🐦 [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190): run `npx upgrade-remix pre` + remove the v2 future flags
+- 🐦 [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190): si vous avez déjà activé les [future flags v2](https://remix.run/blog/future-flags), vous devriez pouvoir upgrader facilement et retirer ces flags.
 - 🐦 [WIP testing docs for Next.js App Router](https://twitter.com/leeerob/status/1698758756924825723)
 - 🐦 [Dan Abramov joins Bluesky](https://twitter.com/dan_abramov/status/1695566446007386214)
-- 🧑‍🎓 [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations) https://twitter.com/leeerob/status/1695160270279074233
-- 🧑‍🎓 [Next.js Deep Dive - Caching and Revalidating](https://github.com/vercel/next.js/discussions/54075)
-- 📜 [Chakra, Panda and Ark - What's the plan?](https://www.adebayosegun.com/blog/chakra-panda-ark-whats-the-plan) https://twitter.com/thesegunadebayo/status/1696608365701423469
-- 📜 [Building a toast component](https://emilkowal.ski/ui/building-a-toast-component) https://twitter.com/emilkowalski_/status/1699044859351269417
-- 📜 [How to Pass a Component as a Prop in React](https://www.totaltypescript.com/pass-component-as-prop-react)
-- 📜 [How React uses pragmas to run tests conditionally](https://andreigatej.dev/blog/how-react-uses-pragmas-to-run-tests-conditionally/)
-- 📜 [Rust Server Components](https://anto.pt/articles/rust-server-components)
+- 🧑‍🎓 [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations): nouvelle page de doc qui explique l'usage de Server Actions et des hooks React `useFormStatus` et `useOptimistic`.
+- 💬 [Next.js Tim Neutkens' Deep Dive - Caching and Revalidating](https://github.com/vercel/next.js/discussions/54075)
+- 📜 [Rust Server Components](https://anto.pt/articles/rust-server-components): propose de reproduire en partie les RSC, MDX et Suspense en utilisant Rust, HTML et quelques autres libs. "the Rust equivalent of T3 Stack". J'ai trouvé cet article très sympa à lire, même si je ne fais pas de Rust et ne suis pas convaincu que le résultat final résolve tous les problèmes des RSCs.
+- 📜 [Chakra, Panda and Ark - What's the plan?](https://www.adebayosegun.com/blog/chakra-panda-ark-whats-the-plan): Segun répond à diverses questions qu'on pourrait se poser sur ses librairies. Chakra v3 arrive Q3, mais utilisera toujours Emotion. L'ajout de "use client" facilite l'usage dans les RSC. Adoption du pattern `asChild` de Radix.
+- 📜 [How to Pass a Component as a Prop in React](https://www.totaltypescript.com/pass-component-as-prop-react): Matt nous partage quelques astuces TypeScript. Le type pour implémenter "as" prop fait peur 😬.
+- 📜 [Handling type-safe toast notifications with zod in Remix applications](https://alemtuzlak.hashnode.dev/handling-toasts-in-remix): expliquer comment utiliser la session flash de Remix pour donner du feedback après une action.
+- 📜 [Parents & Owners in React: Data Flow](https://julesblom.com/writing/parents-owners-data-flow): article intéractif et visuel original, qui explique le problème de props drilling et comment l'éviter avec des slotted components. Explique les notions de parent tree et owner tree. On voit clairement le problème de props drilling sur les diagrammes présentés.
 - 📜 [Optimizing Next.js cold starts for Vercel](https://holocron.so/blog/optimizing-next.js-cold-starts-for-vercel)
-- 📜 [Parents & Owners in React: Data Flow](https://julesblom.com/writing/parents-owners-data-flow)
-- 📜 [Focustro: Development Notes for a Replicating React Application](https://kevinmahoney.co.uk/articles/focustro/)
 - 📜 [Strongly Typing React Props with TypeScript](https://www.totaltypescript.com/react-props-typescript)
 - 📜 [Challenging Established Norms: Making Component Fetching the Exception](https://jjenzz.com/making-component-fetching-the-exception/) + https://twitter.com/jjenzz/status/1698495020028866860
-- 📜 [Managing Side Effects in React](https://ui.dev/c/react/effects) ???
-- 📜 [Use Destructuring To Handle Forms In React!](https://krassnig.dev/blog/use-destructuring-to-handle-forms-in-react.html)
-- 📜 [What Is Streaming In The App Router?](https://www.pronextjs.dev/what-is-streaming-in-the-app-router)
+- 📜 [You Might Not Need A useEffectAsync Hook](https://krassnig.dev/blog/you-might-not-need-a-use-effect-async-hook.html)
 - 📜 [Web Developers, CSS-in-JS is Ruining Your Product](https://cord.com/blog/migrating-from-css-in-js-to-vanilla-extract)
-- 📜 [How to Choose a Deployment Strategy for Your Next.js Application](https://www.freecodecamp.org/news/deployment-strategies-for-nextjs-apps/)
-- 📜 [Storybook - How to run visual tests in 2023](https://www.chromatic.com/blog/how-to-run-visual-regression-tests-in-2023/)
-- 📜 [Custom React Hooks](https://www.markrabey.com/blog/custom-react-hooks)
 - 📜 [Build your own headless UI components](https://www.jacobparis.com/content/react-headless-submenus)
-- 📜 [Create a custom Remix hook to access loader data from any component](https://www.jacobparis.com/content/remix-route-loader-data)
-- 📜 [Handling type-safe toast notifications with zod in Remix applications](https://alemtuzlak.hashnode.dev/handling-toasts-in-remix): expliquer comment utiliser la session flash de Remix pour donner du feedback après une action.
-- 📦 [react-prod-sourcemaps](https://github.com/markerikson/react-prod-sourcemaps) ?
+- 📜 [Building a toast component](https://emilkowal.ski/ui/building-a-toast-component)
 - 📦 [next-flat-routes](https://github.com/ifyio/next-flat-routes)
-- 📦 [Puck - Self-hosted drag and drop editor for React](https://github.com/measuredco/puck) + https://twitter.com/rauchg/status/1699106822698025103
+- 📦 [Puck - Self-hosted drag and drop editor for React](https://github.com/measuredco/puck)
+- 📦 [react-prod-sourcemaps](https://github.com/markerikson/react-prod-sourcemaps)
 - 📦 [Reshaped 2.2 - Now available on NPM](https://reshaped.so/content/blog/2.2)
 - 👥 [ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
 
@@ -139,9 +137,9 @@ Remove Skia frame processing https://github.com/mrousavy/react-native-vision-cam
 
 ## 🇫🇷 En français {#fr}
 
-- [Tailwind est-il la meilleure chose qui soit arrivé au frontend ?](https://www.swebdev.fr/blog/tailwind-est-il-la-meilleure-chose-qui-soit-arrive-au-frontend)
-- [Tuto React Server Component de A à Z en 2023](https://www.youtube.com/watch?v=u4wV0-31oI0)
-- [NextJS Routeur App : Traduction / i18n](https://www.youtube.com/watch?v=zrpZjIiSS5k)
+- 📜 [Tailwind est-il la meilleure chose qui soit arrivé au frontend ?](https://www.swebdev.fr/blog/tailwind-est-il-la-meilleure-chose-qui-soit-arrive-au-frontend)
+- 🎥 [Tuto React Server Component de A à Z en 2023](https://www.youtube.com/watch?v=u4wV0-31oI0)
+- 🎥 [NextJS Routeur App : Traduction / i18n](https://www.youtube.com/watch?v=zrpZjIiSS5k)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
