--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -8,21 +8,15 @@ unlisted: true
 
 Salut à tous !
 
-Bun 1.0 ?
+On couvre 2 semaines de news cette semaine, dont 2 belles sorties: Astro 3.0 et VisionCamera 3.0. Il y a aussi eu beaucoup d'articles intéressants, j'ai du filtrer un peu!
 
-RN EU https://twitter.com/sebastienlorber/status/1696837186677530813
+Bun 1.0 qui va sortir ce soir. Curieux de voir ce qu'ils ont prévu. Pour l'avoir testé sur des tests unitaires en remplacement de Jest, c'est vraiment très rapide.
 
-Astro
+La conférence React-Native EU démarre aujourd'hui. J'ai repéré [🐦 quelques talks très intéressants](https://twitter.com/sebastienlorber/status/1696837186677530813), en particulier celui sur Static Hermes.
 
-Node 16 EOL https://twitter.com/kentcdodds/status/1698820286681141394
+Pour ceux qui veulent visiter l'Italie, allez faire un tour à [ReactJS Day](https://2023.reactjsday.it/) à Vérone le 27 Octobre 27. La conférence nous offre [-10% sur les entrées](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) et offre à la newsletter 2 tickets online/remote, que j'offre eux 2 premiers qui répondront à cet email.
 
-ReatJS Day intro + raffle 2 tickets
-
-[ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
-
-https://twitter.com/sebastienlorber/status/1699065823959421109
-
-https://www.indiehackers.com/product/french-react-newsletter
+J'oublie souvent de le mentionner ici, mais je "build in public". Vous pouvez consulter mon dernier [rapport mensuel sur Indie Hackers](https://www.indiehackers.com/product/french-react-newsletter) et les [🐦 détails supplémentaires sur Twitter](https://twitter.com/sebastienlorber/status/1699065823959421109).
 
 <!-- truncate -->
 
@@ -68,8 +62,8 @@ https://twitter.com/JoshWComeau/status/1699467100153057743
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 🐦 [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190): si vous avez déjà activé les [future flags v2](https://remix.run/blog/future-flags), vous devriez pouvoir upgrader facilement et retirer ces flags.
+- 🐦 [Dan Abramov joins Bluesky](https://twitter.com/dan_abramov/status/1695566446007386214): Dan a quitté Meta et rejoins ce compétiteur Twitter qui se base sur une app Expo cross-platform. Je trouve que c'est une bonne nouvelle, on a peut-être gagné un [super évangéliste pour défendre le cross-platform et Expo](https://twitter.com/dan_abramov/status/1699476986727399933).
 - 🐦 [WIP testing docs for Next.js App Router](https://twitter.com/leeerob/status/1698758756924825723)
-- 🐦 [Dan Abramov joins Bluesky](https://twitter.com/dan_abramov/status/1695566446007386214)
 - 🧑‍🎓 [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations): nouvelle page de doc qui explique l'usage de Server Actions et des hooks React `useFormStatus` et `useOptimistic`.
 - 💬 [Next.js Tim Neutkens' Deep Dive - Caching and Revalidating](https://github.com/vercel/next.js/discussions/54075)
 - 📜 [Rust Server Components](https://anto.pt/articles/rust-server-components): propose de reproduire en partie les RSC, MDX et Suspense en utilisant Rust, HTML et quelques autres libs. "the Rust equivalent of T3 Stack". J'ai trouvé cet article très sympa à lire, même si je ne fais pas de Rust et ne suis pas convaincu que le résultat final résolve tous les problèmes des RSCs.
