--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -62,6 +62,8 @@ On retrouve aussi d'autres améliorations notables, dont:
 
 [**Making Sense of React Server Components**](https://www.joshwcomeau.com/react/server-components/)
 
+Josh Comeau reviens avec une belle introduction sur les React Server Components, extrait de son [cours](https://www.joyofreact.com/) qui sort la semaine prochaine. Les nombreux diagrammes animés facilitent la compréhension de ce nouveau paradigme React.
+
 ---
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
