--- a/website/newsletter/158/index.mdx
+++ b/website/newsletter/158/index.mdx
@@ -1,14 +1,22 @@
 ---
 slug: /158
-title: "This Week In React #158: ..."
+title: "This Week In React #158: Astro, RSC, VisionCamera, Owner Tree, Props Drilling, Next.js, Remix, Chakra, TypeScript, Skia, Biome, CSS... "
 authors: [slorber]
 date: 09-06-2023
 unlisted: true
 ---
 
-Hi everyone!
+Salut à tous !
 
-<Todo />
+On couvre 2 semaines de news cette semaine, dont 2 belles sorties: Astro 3.0 et VisionCamera 3.0. Il y a aussi eu beaucoup d'articles intéressants, j'ai du filtrer un peu!
+
+Bun 1.0 qui va sortir ce soir. Curieux de voir ce qu'ils ont prévu. Pour l'avoir testé sur des tests unitaires en remplacement de Jest, c'est vraiment très rapide.
+
+La conférence React-Native EU démarre aujourd'hui. J'ai repéré [🐦 quelques talks très intéressants](https://twitter.com/sebastienlorber/status/1696837186677530813), en particulier celui sur Static Hermes.
+
+Pour ceux qui veulent visiter l'Italie, allez faire un tour à [ReactJS Day](https://2023.reactjsday.it/) à Vérone le 27 Octobre 27. La conférence nous offre [-10% sur les entrées](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) et offre à la newsletter 2 tickets online/remote, que j'offre eux 2 premiers qui répondront à cet email.
+
+J'oublie souvent de le mentionner ici, mais je "build in public". Vous pouvez consulter mon dernier [rapport mensuel sur Indie Hackers](https://www.indiehackers.com/product/french-react-newsletter) et les [🐦 détails supplémentaires sur Twitter](https://twitter.com/sebastienlorber/status/1699065823959421109).
 
 <!-- truncate -->
 
@@ -34,9 +42,53 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Astro 3.0](/emails/issues/158/astro3.jpg)](https://astro.build/blog/astro-3/)
+
+[**Astro 3.0**](https://astro.build/blog/astro-3/)
+
+Cette nouvelle version d'Astro innove en particulier par l'usage de la nouvelle API View Transition, et la possibilité de naviguer de manière fluide et animée d'une page à l'autre, tout en préservant le state des composants affichés. Cela réduit le besoin de recourir à une SPA pour de nombreux cas d'usage.
+
+On retrouve aussi d'autres améliorations notables, dont:
+
+- Image Optimization stable
+- Faster Rendering Performance: Astro components render 30-75% faster.
+- SSR Enhancements for Serverless: New ways to connect to your hosting platform.
+- HMR Enhancements for JSX: Fast Refresh support for React and Preact.
+- Optimized Build Output: Cleaner and more performant HTML.
+
+---
+
+[![Making Sense of React Server Components](/emails/issues/158/rsc.jpg)](https://www.joshwcomeau.com/react/server-components/)
+
+[**Making Sense of React Server Components**](https://www.joshwcomeau.com/react/server-components/)
+
+Josh Comeau reviens avec une belle introduction sur les React Server Components, extrait de son [cours](https://www.joyofreact.com/) qui sort la semaine prochaine. Les nombreux diagrammes animés facilitent la compréhension de ce nouveau paradigme React.
+
+---
+
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- [ReactJS Day, Octobre 27, 2023] is offering us [-10% on conference tickets](https://2023.reactjsday.it/index.html) with code  "media_TWIR"
+- 🐦 [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190): si vous avez déjà activé les [future flags v2](https://remix.run/blog/future-flags), vous devriez pouvoir upgrader facilement et retirer ces flags.
+- 🐦 [Dan Abramov joins Bluesky](https://twitter.com/dan_abramov/status/1695566446007386214): Dan a quitté Meta et rejoins ce compétiteur Twitter qui se base sur une app Expo cross-platform. Je trouve que c'est une super nouvelle, on a peut-être gagné un [super évangéliste pour défendre le cross-platform et Expo](https://twitter.com/dan_abramov/status/1699476986727399933).
+- 🐦 [WIP testing docs for Next.js App Router](https://twitter.com/leeerob/status/1698758756924825723)
+- 🧑‍🎓 [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations): nouvelle page de doc qui explique l'usage de Server Actions et des hooks React `useFormStatus` et `useOptimistic`.
+- 💬 [Next.js Tim Neutkens' Deep Dive - Caching and Revalidating](https://github.com/vercel/next.js/discussions/54075)
+- 📜 [Parents & Owners in React: Data Flow](https://julesblom.com/writing/parents-owners-data-flow): article intéractif et visuel original, qui explique le problème de props drilling et comment l'éviter avec des slotted components. Explique les notions de parent tree et owner tree. On voit clairement le problème de props drilling sur les diagrammes présentés.
+- 📜 [Challenging Established Norms: Making Component Fetching the Exception](https://jjenzz.com/making-component-fetching-the-exception/): reflexion intéressante qui encourage a exécuter ses queries au niveau de la route pour éviter les waterfalls, et utiliser la composition pour éviter le props drilling.
+- 📜 [Rust Server Components](https://anto.pt/articles/rust-server-components): propose de reproduire en partie les RSC, MDX et Suspense en utilisant Rust, HTML et quelques autres libs. "the Rust equivalent of T3 Stack". J'ai trouvé cet article très sympa à lire, même si je ne fais pas de Rust et ne suis pas convaincu que le résultat final résolve tous les problèmes des RSCs.
+- 📜 [Chakra, Panda and Ark - What's the plan?](https://www.adebayosegun.com/blog/chakra-panda-ark-whats-the-plan): Segun répond à diverses questions qu'on pourrait se poser sur ses librairies. Chakra v3 arrive Q3, mais utilisera toujours Emotion. L'ajout de "use client" facilite l'usage dans les RSC. Adoption du pattern `asChild` de Radix.
+- 📜 [How to Pass a Component as a Prop in React](https://www.totaltypescript.com/pass-component-as-prop-react): Matt nous partage quelques astuces TypeScript. Le type pour implémenter "as" prop fait peur 😬.
+- 📜 [Handling type-safe toast notifications with zod in Remix applications](https://alemtuzlak.hashnode.dev/handling-toasts-in-remix): expliquer comment utiliser la session flash de Remix pour donner du feedback après une action.
+- 📜 [Optimizing Next.js cold starts for Vercel](https://holocron.so/blog/optimizing-next.js-cold-starts-for-vercel)
+- 📜 [Strongly Typing React Props with TypeScript](https://www.totaltypescript.com/react-props-typescript)
+- 📜 [You Might Not Need A useEffectAsync Hook](https://krassnig.dev/blog/you-might-not-need-a-use-effect-async-hook.html)
+- 📜 [Web Developers, CSS-in-JS is Ruining Your Product](https://cord.com/blog/migrating-from-css-in-js-to-vanilla-extract)
+- 📜 [Build your own headless UI components](https://www.jacobparis.com/content/react-headless-submenus)
+- 📜 [Building a toast component](https://emilkowal.ski/ui/building-a-toast-component)
+- 📦 [next-flat-routes](https://github.com/ifyio/next-flat-routes)
+- 📦 [Puck - Self-hosted drag and drop editor for React](https://github.com/measuredco/puck)
+- 📦 [react-prod-sourcemaps](https://github.com/markerikson/react-prod-sourcemaps)
+- 📦 [Reshaped 2.2 - Now available on NPM](https://reshaped.so/content/blog/2.2)
+- 👥 [ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -56,24 +108,58 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![VisionCamera 3.0](/emails/issues/158/visioncamera3.jpg)](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.0.0)
 
-- 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław, September 7–8, 2023) is offering us [-15% on conference tickets](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) with code "thisweekinreact15".
+[**VisionCamera 3.0**](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.0.0)
+
+La nouvelle version de VisionCamera vient de sortir, avec en gros titres:
+
+- Full Android Camera2 rewrite
+- Custom GPU OpenGL Video Pipeline
+- New Camera Features
+- New Frame Processor Engine (react-native-worklets-core)
+- New Frame Processor Plugin API
+
+Marc a pris la décision de finalement [retirer l'intégration avec Skia](https://github.com/mrousavy/react-native-vision-camera/pull/1740) pour conserver une taille et complexité du code raisonnable sur VisionCamera.
+
+Dans [**Pose Detection using VisionCamera V3, TFLite and Skia**](https://mrousavy.com/blog/VisionCamera-Pose-Detection-TFLite), il explique ce qu'il est possible de faire avec une telle intégration. Le résultat est très impressionnant.
+
+[![Pose Detection using VisionCamera V3, TFLite and Skia](/emails/issues/158/frame-processing-skia.jpg)](https://mrousavy.com/blog/VisionCamera-Pose-Detection-TFLite)
+
+---
+
+- 📜 [Things to look forward to in React Native](https://buttondown.email/whatever_jamie/archive/things-to-look-forward-to-in-react-native/): offre une bonne vision d'ensemble de ce qu'on peut attendre de React-Native dans les années à venir. Web Conformance, Static Hermes, Node-API, React Server Components...
+- 📜 [React Native Performance Measuring and Monitoring Tools](https://semaphoreci.com/blog/react-native-performance-measuring-monitoring-tools)
+- 🧵 [All gestures from React Native Gesture Handler explained with real-world examples](https://twitter.com/kacperkapusciak/status/1698719844089160189)
+- 👀 [Expo - Understand your users and grow your app with EAS Insights](https://expo.dev/changelog/2023/08-22-insights)
+- 📦 [expo-ahap - Apple Haptic and Audio Pattern](https://github.com/EvanBacon/expo-ahap)
+- 📦 [react-native-z-view](https://github.com/intergalacticspacehighway/react-native-z-view)
+- 📦 [Universal Medusa - E-commerce starter using Expo, Solito, Next.js, Nativewind, Medusa](https://github.com/bidah/universal-medusa/)
+- 🔗 [Awesome Universal React - Universal frameworks, libraries, design systems, apps and resources](https://github.com/axeldelafosse/awesome-universal-react)
+- 🎥 [Experimental Blur Gradient in React Native](https://www.youtube.com/watch?v=oboF_H1MApo)
+- 🎥 [iPhone wallpapers, but in React Native Skia](https://www.youtube.com/watch?v=Apqd749v34I)
+- 👥 [React Native EU 2023](https://www.react-native.eu/) (Wrocław 🇵🇱, September 7–8) is offering us [-15% on conference tickets](https://ti.to/react-native-eu/2023/discount/thisweekinreact15) with code "thisweekinreact15".
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📊 [State of CSS 2023 - Survey Results](https://2023.stateofcss.com/)
+- 📜 [My Node.js is a bit Rusty](https://gal.hagever.com/posts/my-node-js-is-a-bit-rusty)
+- 📜 [Announcing Biome - The official fork of Rome (unmaintained)](https://biomejs.dev/blog/annoucing-biome)
+- 📜 [View Transitions Break Incremental Rendering](https://ericportis.com/posts/2023/view-transitions-break-incremental-rendering/)
+- 📜 [Use web components for what they’re good at](https://nolanlawson.com/2023/08/23/use-web-components-for-what-theyre-good-at/)
+- 📜 [Type safe CSS design systems with @property](https://nerdy.dev/cant-break-this-design-system)
+- 👀 [TypeScript 5.3 Iteration Plan](https://github.com/microsoft/TypeScript/issues/55486)
+- 📦 [Announcing TypeScript 5.2](https://devblogs.microsoft.com/typescript/announcing-typescript-5-2/)
+- 📦 [Node 20.6 - Built-in .env file support](https://nodejs.org/en/blog/release/v20.6.0)
+- 📦 [Firefox 117 - CSS Nesting is now widely available](https://www.mozilla.org/en-US/firefox/117.0/releasenotes/)
+- 📦 [Espresso Build - Experimental next-gen package registry, package manager, and toolchain](https://espresso.build/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Other funny tweets this week](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/158/meme.jpg)](https://twitter.com/sebastienlorber/status/1687456078198394882)
 
 See ya! 👋
