--- a/website/newsletter/158/index.mdx
+++ b/website/newsletter/158/index.mdx
@@ -8,15 +8,15 @@ unlisted: true
 
 Salut à tous !
 
-On couvre 2 semaines de news cette semaine, dont 2 belles sorties: Astro 3.0 et VisionCamera 3.0. Il y a aussi eu beaucoup d'articles intéressants, j'ai du filtrer un peu!
+We're covering 2 weeks of news, including 2 great releases: Astro 3.0 and VisionCamera 3.0. There have also been a lot of interesting articles, so I've had to filter a bit!
 
-Bun 1.0 qui va sortir ce soir. Curieux de voir ce qu'ils ont prévu. Pour l'avoir testé sur des tests unitaires en remplacement de Jest, c'est vraiment très rapide.
+Bun 1.0 coming out tonight. I'm curious to see what they have planned. Having tested it on unit tests as a replacement for Jest, it's really very fast.
 
-La conférence React-Native EU démarre aujourd'hui. J'ai repéré [🐦 quelques talks très intéressants](https://twitter.com/sebastienlorber/status/1696837186677530813), en particulier celui sur Static Hermes.
+The React-Native EU conference kicks off today. I spotted some [🐦 very interesting talks](https://twitter.com/sebastienlorber/status/1696837186677530813), particularly the one on Static Hermes.
 
-Pour ceux qui veulent visiter l'Italie, allez faire un tour à [ReactJS Day](https://2023.reactjsday.it/) à Vérone le 27 Octobre 27. La conférence nous offre [-10% sur les entrées](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) et offre à la newsletter 2 tickets online/remote, que j'offre eux 2 premiers qui répondront à cet email.
+For those who want to visit Italy, go to [ReactJS Day](https://2023.reactjsday.it/) in Verona on 27 October 27. The conference is offering [-10% on tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) and 2 online/remote tickets to our readers, which I'm giving away to the first 2 people who reply to this email and claim them.
 
-J'oublie souvent de le mentionner ici, mais je "build in public". Vous pouvez consulter mon dernier [rapport mensuel sur Indie Hackers](https://www.indiehackers.com/product/french-react-newsletter) et les [🐦 détails supplémentaires sur Twitter](https://twitter.com/sebastienlorber/status/1699065823959421109).
+I often forget to mention it here, but I "build in public". You can check out my latest [monthly Indie Hackers report](https://www.indiehackers.com/product/french-react-newsletter) and [🐦 more Twitter details](https://twitter.com/sebastienlorber/status/1699065823959421109).
 
 <!-- truncate -->
 
@@ -46,9 +46,9 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 [**Astro 3.0**](https://astro.build/blog/astro-3/)
 
-Cette nouvelle version d'Astro innove en particulier par l'usage de la nouvelle API View Transition, et la possibilité de naviguer de manière fluide et animée d'une page à l'autre, tout en préservant le state des composants affichés. Cela réduit le besoin de recourir à une SPA pour de nombreux cas d'usage.
+This new version of Astro innovates in particular through the use of the new View Transition API, and the ability to navigate fluidly and animatedly from one page to another, while preserving the state of the components displayed. This reduces the need for a SPA in many use cases.
 
-On retrouve aussi d'autres améliorations notables, dont:
+Other notable improvements include:
 
 - Image Optimization stable
 - Faster Rendering Performance: Astro components render 30-75% faster.
@@ -62,22 +62,22 @@ On retrouve aussi d'autres améliorations notables, dont:
 
 [**Making Sense of React Server Components**](https://www.joshwcomeau.com/react/server-components/)
 
-Josh Comeau reviens avec une belle introduction sur les React Server Components, extrait de son [cours](https://www.joyofreact.com/) qui sort la semaine prochaine. Les nombreux diagrammes animés facilitent la compréhension de ce nouveau paradigme React.
+Josh Comeau is back with a great introduction to React Server Components, taken from his [course](https://www.joyofreact.com/) that should become available next week. The many animated diagrams make it easy to understand this new React paradigm.
 
 ---
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- 🐦 [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190): si vous avez déjà activé les [future flags v2](https://remix.run/blog/future-flags), vous devriez pouvoir upgrader facilement et retirer ces flags.
-- 🐦 [Dan Abramov joins Bluesky](https://twitter.com/dan_abramov/status/1695566446007386214): Dan a quitté Meta et rejoins ce compétiteur Twitter qui se base sur une app Expo cross-platform. Je trouve que c'est une super nouvelle, on a peut-être gagné un [super évangéliste pour défendre le cross-platform et Expo](https://twitter.com/dan_abramov/status/1699476986727399933).
+- 🐦 [Remix v2 pre-release](https://twitter.com/remix_run/status/1696525340640936190): if you have already enabled [future flags v2](https://remix.run/blog/future-flags), you should be able to upgrade easily and remove these flags.
+- 🐦 [Dan Abramov joins Bluesky](https://twitter.com/dan_abramov/status/1695566446007386214): Dan has left Meta and joined this Twitter competitor based on a cross-platform Expo app. I think this is great news, we may have gained a great evangelist [to promote cross-platform and Expo](https://twitter.com/dan_abramov/status/1699476986727399933).
 - 🐦 [WIP testing docs for Next.js App Router](https://twitter.com/leeerob/status/1698758756924825723)
-- 🧑‍🎓 [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations): nouvelle page de doc qui explique l'usage de Server Actions et des hooks React `useFormStatus` et `useOptimistic`.
+- 🧑‍🎓 [Next.js App Router - Forms and Mutations docs](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations): new doc page explaining the use of Server Actions and the React `useFormStatus` and `useOptimistic` hooks.
 - 💬 [Next.js Tim Neutkens' Deep Dive - Caching and Revalidating](https://github.com/vercel/next.js/discussions/54075)
-- 📜 [Parents & Owners in React: Data Flow](https://julesblom.com/writing/parents-owners-data-flow): article intéractif et visuel original, qui explique le problème de props drilling et comment l'éviter avec des slotted components. Explique les notions de parent tree et owner tree. On voit clairement le problème de props drilling sur les diagrammes présentés.
-- 📜 [Challenging Established Norms: Making Component Fetching the Exception](https://jjenzz.com/making-component-fetching-the-exception/): reflexion intéressante qui encourage a exécuter ses queries au niveau de la route pour éviter les waterfalls, et utiliser la composition pour éviter le props drilling.
-- 📜 [Rust Server Components](https://anto.pt/articles/rust-server-components): propose de reproduire en partie les RSC, MDX et Suspense en utilisant Rust, HTML et quelques autres libs. "the Rust equivalent of T3 Stack". J'ai trouvé cet article très sympa à lire, même si je ne fais pas de Rust et ne suis pas convaincu que le résultat final résolve tous les problèmes des RSCs.
-- 📜 [Chakra, Panda and Ark - What's the plan?](https://www.adebayosegun.com/blog/chakra-panda-ark-whats-the-plan): Segun répond à diverses questions qu'on pourrait se poser sur ses librairies. Chakra v3 arrive Q3, mais utilisera toujours Emotion. L'ajout de "use client" facilite l'usage dans les RSC. Adoption du pattern `asChild` de Radix.
-- 📜 [How to Pass a Component as a Prop in React](https://www.totaltypescript.com/pass-component-as-prop-react): Matt nous partage quelques astuces TypeScript. Le type pour implémenter "as" prop fait peur 😬.
-- 📜 [Handling type-safe toast notifications with zod in Remix applications](https://alemtuzlak.hashnode.dev/handling-toasts-in-remix): expliquer comment utiliser la session flash de Remix pour donner du feedback après une action.
+- 📜 [Parents & Owners in React: Data Flow](https://julesblom.com/writing/parents-owners-data-flow): original interactive and visual article, explaining the problem of props drilling and how to avoid it with slotted components. Explains the concepts of parent tree and owner tree. The props drilling problem becomes clearly visible in the diagrams.
+- 📜 [Challenging Established Norms: Making Component Fetching the Exception](https://jjenzz.com/making-component-fetching-the-exception/): an interesting thought that encourages you to run your queries at route level to avoid waterfalls, and use composition to avoid props drilling.
+- 📜 [Rust Server Components](https://anto.pt/articles/rust-server-components): proposes to partially reproduce RSC, MDX and Suspense using Rust, HTMX and a few other libs. "the Rust equivalent of T3 Stack". Nice to read, even though I don't do Rust. Not convinced that the end result solves all the problems RSCs do.
+- 📜 [Chakra, Panda and Ark - What's the plan?](https://www.adebayosegun.com/blog/chakra-panda-ark-whats-the-plan): Segun answers a number of questions about his libraries. Chakra v3 arrives in Q4, but will still use Emotion. The addition of "use client" makes it easier to use in RSCs. Adoption of the Radix `asChild` pattern.
+- 📜 [How to Pass a Component as a Prop in React](https://www.totaltypescript.com/pass-component-as-prop-react): Matt shares some TypeScript + React typing tips. The type to implement "as" prop is quite scary 😬.
+- 📜 [Handling type-safe toast notifications with zod in Remix applications](https://alemtuzlak.hashnode.dev/handling-toasts-in-remix): explains how to use the Remix flash session to give feedback after an action.
 - 📜 [Optimizing Next.js cold starts for Vercel](https://holocron.so/blog/optimizing-next.js-cold-starts-for-vercel)
 - 📜 [Strongly Typing React Props with TypeScript](https://www.totaltypescript.com/react-props-typescript)
 - 📜 [You Might Not Need A useEffectAsync Hook](https://krassnig.dev/blog/you-might-not-need-a-use-effect-async-hook.html)
@@ -112,7 +112,7 @@ SurveyJS is a product suite of four open-source JavaScript libraries that allow 
 
 [**VisionCamera 3.0**](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.0.0)
 
-La nouvelle version de VisionCamera vient de sortir, avec en gros titres:
+The new version of VisionCamera has just been released. Highlights:
 
 - Full Android Camera2 rewrite
 - Custom GPU OpenGL Video Pipeline
@@ -120,15 +120,15 @@ La nouvelle version de VisionCamera vient de sortir, avec en gros titres:
 - New Frame Processor Engine (react-native-worklets-core)
 - New Frame Processor Plugin API
 
-Marc a pris la décision de finalement [retirer l'intégration avec Skia](https://github.com/mrousavy/react-native-vision-camera/pull/1740) pour conserver une taille et complexité du code raisonnable sur VisionCamera.
+Marc took the decision to finally [remove the integration with Skia](https://github.com/mrousavy/react-native-vision-camera/pull/1740) to keep the code size and complexity reasonable on VisionCamera.
 
-Dans [**Pose Detection using VisionCamera V3, TFLite and Skia**](https://mrousavy.com/blog/VisionCamera-Pose-Detection-TFLite), il explique ce qu'il est possible de faire avec une telle intégration. Le résultat est très impressionnant.
+In [**Pose Detection using VisionCamera V3, TFLite and Skia**](https://mrousavy.com/blog/VisionCamera-Pose-Detection-TFLite), he explains what is possible with such integration. The results are very impressive.
 
 [![Pose Detection using VisionCamera V3, TFLite and Skia](/emails/issues/158/frame-processing-skia.jpg)](https://mrousavy.com/blog/VisionCamera-Pose-Detection-TFLite)
 
 ---
 
-- 📜 [Things to look forward to in React Native](https://buttondown.email/whatever_jamie/archive/things-to-look-forward-to-in-react-native/): offre une bonne vision d'ensemble de ce qu'on peut attendre de React-Native dans les années à venir. Web Conformance, Static Hermes, Node-API, React Server Components...
+- 📜 [Things to look forward to in React Native](https://buttondown.email/whatever_jamie/archive/things-to-look-forward-to-in-react-native/): offers a good overview of what we can expect from React-Native in the years to come. Web Conformance, Static Hermes, Node-API, React Server Components...
 - 📜 [React Native Performance Measuring and Monitoring Tools](https://semaphoreci.com/blog/react-native-performance-measuring-monitoring-tools)
 - 🧵 [All gestures from React Native Gesture Handler explained with real-world examples](https://twitter.com/kacperkapusciak/status/1698719844089160189)
 - 👀 [Expo - Understand your users and grow your app with EAS Insights](https://expo.dev/changelog/2023/08-22-insights)
