--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /158
-title: "React Hebdo #158: Astro, RSC, VisionCamera, Owner Tree, Props Drilling, Next.js, Remix, Chakra, TypeScript, Skia, Biome, CSS... "
+title: "React Hebdo #158: Astro, Server Components, VisionCamera, Owner Tree, Props Drilling, Next.js, Remix, Chakra, TypeScript, Skia, Biome, CSS, Node.js... "
 authors: [slorber]
 date: 09-06-2023
 ---
