--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -44,6 +44,7 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 <Todo />
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 👥 [ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
+- 👥 [React Advanced](https://reactadvanced.com/) (London, Octobre 20-23, 2023) is offering us [-10% on conference tickets](XXX) with code "XXX"
 
 <SubscribeFormEmbed placement="middle" />
 
