--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -60,6 +60,8 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 <Todo />
 
+- [Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+
 ---
 
 ## 🇫🇷 En français {#fr}
