--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -59,6 +59,7 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 ## 📱 React-Native {#react-native}
 
 <Todo />
+- [Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
 
 ---
 
