--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -42,9 +42,10 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 ## ⚛️ React {#react}
 
 <Todo />
+
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 👥 [ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
-- 👥 [React Advanced](https://reactadvanced.com/) (London, Octobre 20-23, 2023) is offering us [-10% on conference tickets](XXX) with code "XXX"
+- 👥 [React Advanced](https://reactadvanced.com/) (London, Octobre 20-23, 2023) is offering us [-10% on conference tickets](https://TODO.COM) with code "XXX" **TODO**
 
 <SubscribeFormEmbed placement="middle" />
 
