--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -53,7 +53,13 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![highlight.io - The open-source, full-stack Monitoring Platform](/emails/issues/159/highlight.jpg)](http://highlight.io)
+
+[**highlight.io**](http://highlight.io) is a fully open-source Session Replay, Error Monitoring, and Logging platform for your next project.
+
+Don't waste time trying to guess why a bug occurs. Instead, use highlight Session Replay and get a clear picture of whatever happens in the browser: console logs, errors, and network requests.
+
+It is super easy to install in your favorite framework: [React.js,](https://www.highlight.io/docs/getting-started/client-sdk/reactjs) [Next.js,](https://www.highlight.io/docs/getting-started/fullstack-frameworks/next-js) [Remix](https://www.highlight.io/docs/getting-started/fullstack-frameworks/remix), or anything else!
 
 ---
 
