Rename ReactJS Day => reactjsday

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/158/index.mdx
@@ -13,7 +13,7 @@ Bun 1.0 qui va sortir ce soir. Curieux de voir ce qu'ils ont prévu. Pour l'avoi
 
 La conférence React-Native EU démarre aujourd'hui. J'ai repéré [🐦 quelques talks très intéressants](https://twitter.com/sebastienlorber/status/1696837186677530813), en particulier celui sur Static Hermes.
 
-Pour ceux qui veulent visiter l'Italie, allez faire un tour à [ReactJS Day](https://2023.reactjsday.it/) à Vérone le 27 Octobre 27. La conférence nous offre [-10% sur les entrées](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) et offre à la newsletter 2 tickets online/remote, que j'offre eux 2 premiers qui répondront à cet email.
+Pour ceux qui veulent visiter l'Italie, allez faire un tour à [reactjsday](https://2023.reactjsday.it/) à Vérone le 27 Octobre 27. La conférence nous offre [-10% sur les entrées](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) et offre à la newsletter 2 tickets online/remote, que j'offre eux 2 premiers qui répondront à cet email.
 
 J'oublie souvent de le mentionner ici, mais je "build in public". Vous pouvez consulter mon dernier [rapport mensuel sur Indie Hackers](https://www.indiehackers.com/product/french-react-newsletter) et les [🐦 détails supplémentaires sur Twitter](https://twitter.com/sebastienlorber/status/1699065823959421109).
 
@@ -87,7 +87,7 @@ Josh Comeau reviens avec une belle introduction sur les React Server Components,
 - 📦 [Puck - Self-hosted drag and drop editor for React](https://github.com/measuredco/puck)
 - 📦 [react-prod-sourcemaps](https://github.com/markerikson/react-prod-sourcemaps)
 - 📦 [Reshaped 2.2 - Now available on NPM](https://reshaped.so/content/blog/2.2)
-- 👥 [ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
+- 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
 
 <SubscribeFormEmbed placement="middle" />
 
