--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -44,7 +44,7 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 <Todo />
 
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
-- 👥 [ReactJS Day](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
+- 👥 [reactjsday](https://2023.reactjsday.it/) (Verona 🇮🇹, Octobre 27, 2023) is offering us [-10% on conference tickets](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR) with code "media_TWIR"
 - 👥 [React Advanced](https://reactadvanced.com/) (London, Octobre 20-23, 2023) is offering us [-10% on conference tickets](https://TODO.COM) with code "XXX" **TODO**
 
 <SubscribeFormEmbed placement="middle" />
@@ -67,7 +67,8 @@ It is super easy to install in your favorite framework: [React.js,](https://www.
 
 ## 📱 React-Native {#react-native}
 
-<Todo />- [Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+<Todo />- [Build React Native Apps Faster for iOS, Android, and
+Web!](https://www.blitz-rn.com/)
 
 ---
 
