--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -71,9 +71,9 @@ It is super easy to install in your favorite framework: [React.js,](https://www.
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
 
-- [Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+<Todo />
 
 ---
 
