--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -67,8 +67,9 @@ It is super easy to install in your favorite framework: [React.js,](https://www.
 
 ## 📱 React-Native {#react-native}
 
-<Todo />- [Build React Native Apps Faster for iOS, Android, and
-Web!](https://www.blitz-rn.com/)
+- 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+
+<Todo />
 
 ---
 
