--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/159/index.mdx
@@ -10,6 +10,8 @@ Salut à tous !
 
 React Advanced:
 
+- [Turbo 8 is dropping TypeScript](https://world.hey.com/dhh/turbo-8-is-dropping-typescript-70165c01)
+
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <Todo />
@@ -45,8 +47,11 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 ## ⚛️ React {#react}
 
-<Todo />
-
+- [Next Nav](https://www.next-nav.com/) ?
+- [Automatic visual tests in Storybook, plus 2.2x faster build times for React+TS](https://storybook.js.org/blog/automatic-visual-tests-plus-2x-faster-react-ts/)
+- [Scaling frontend app teams using Relay](https://hasura.io/blog/scaling-frontend-app-teams-using-relay/)
+- [A Wide View of Automated Testing in React Apps](https://reacthandbook.dev/automated-testing)
+- [Styling React Select with Tailwind](https://www.jussivirtanen.fi/writing/styling-react-select-with-tailwind)
 - 💸 [Zero To Shipped - Master Fast-Paced Fullstack Development and **Finally** ship that product](https://www.zerotoshipped.com/)
 - 👥 [reactjsday](https://2023.reactjsday.it/) (Verone 🇮🇹, 27 Octobre) nous offre [-10% - code "media_TWIR"](https://ti.to/grusp/reactjsday-2023/discount/media_TWIR)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
@@ -61,17 +66,18 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 [**highlight.io - The open-source, full-stack Monitoring Platform**](http://highlight.io)
 
-[**highlight.io**](http://highlight.io) is a fully open-source Session Replay, Error Monitoring, and Logging platform for your next project.
+[**highlight.io**](http://highlight.io) is a truly open-source Session Replay, Error Monitoring, and Logging platform for your next project.
 
-Don't waste time trying to guess why a bug occurs. Instead, use highlight Session Replay and get a clear picture of whatever happens in the browser: console logs, errors, and network requests.
+Don't waste time trying to guess why a bug occurs. Instead, use highlight and get a clear picture of whatever happens in the browser and on your server-side application.
 
-It is super easy to install in your favorite framework: [React.js,](https://www.highlight.io/docs/getting-started/client-sdk/reactjs) [Next.js,](https://www.highlight.io/docs/getting-started/fullstack-frameworks/next-js) [Remix](https://www.highlight.io/docs/getting-started/fullstack-frameworks/remix), or anything else!
+It is super easy to install in your favorite framework: [React.js,](https://www.highlight.io/docs/getting-started/client-sdk/reactjs) [Next.js,](https://www.highlight.io/docs/getting-started/fullstack-frameworks/next-js) [Remix](https://www.highlight.io/docs/getting-started/fullstack-frameworks/remix), or anything else!
 
 ---
 
 ## 📱 React-Native {#react-native}
 
 - 💸 [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+- Hermes thread: https://twitter.com/jamonholmgren/status/1700054607626428544
 
 <Todo />
 
@@ -79,7 +85,7 @@ It is super easy to install in your favorite framework: [React.js,](https://www.
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
+- [Du Web au Mobile avec Capacitor](https://yphil.gitlab.io/2023/07/16/dolores-fr/)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -95,13 +101,23 @@ It is super easy to install in your favorite framework: [React.js,](https://www.
 
 ## 🔀 Autre {#other}
 
-<Todo />
+[Bun 1.0](https://bun.sh/blog/bun-v1.0)
+
+---
+
+- [Matteo Collina - My thoughts on Bun and other Adventures](https://adventures.nodeland.dev/archive/my-thoughts-on-bun/)
+- [Announcing native npm support on Deno Deploy](https://deno.com/blog/npm-on-deno-deploy)
+- [Your Cache Headers Could Probably be More Aggressive](https://www.macarthur.me/posts/more-aggressive-cache-headers)
+- [Are Big Projects Ditching TypeScript?](https://www.totaltypescript.com/are-big-projects-ditching-typescript)
+- [An Overview of 25+ UI Component Libraries in 2023](https://www.builder.io/blog/25-plus-ui-component-libraries)
+
+  <Todo />
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/erikras/status/1701658277807849487
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
