--- a/website/newsletter/159/index.mdx
+++ b/website/newsletter/159/index.mdx
@@ -57,11 +57,11 @@ Unlock enterprise-grade features, functions, and UI components completely free f
 
 [**highlight.io - The open-source, full-stack Monitoring Platform**](http://highlight.io)
 
-[**highlight.io**](http://highlight.io) is a fully open-source Session Replay, Error Monitoring, and Logging platform for your next project.
+[**highlight.io**](http://highlight.io) is a truly open-source Session Replay, Error Monitoring, and Logging platform for your next project.
 
-Don't waste time trying to guess why a bug occurs. Instead, use highlight Session Replay and get a clear picture of whatever happens in the browser: console logs, errors, and network requests.
+Don't waste time trying to guess why a bug occurs. Instead, use highlight and get a clear picture of whatever happens in the browser and on your server-side application.
 
-It is super easy to install in your favorite framework: [React.js,](https://www.highlight.io/docs/getting-started/client-sdk/reactjs) [Next.js,](https://www.highlight.io/docs/getting-started/fullstack-frameworks/next-js) [Remix](https://www.highlight.io/docs/getting-started/fullstack-frameworks/remix), or anything else!
+It is super easy to install in your favorite framework: [React.js,](https://www.highlight.io/docs/getting-started/client-sdk/reactjs) [Next.js,](https://www.highlight.io/docs/getting-started/fullstack-frameworks/next-js) [Remix](https://www.highlight.io/docs/getting-started/fullstack-frameworks/remix), or anything else!
 
 ---
 
